--- a/include/themes/midwinter/css/media/core.css
+++ b/include/themes/midwinter/css/media/core.css
@@ -1479,6 +1479,7 @@ table.cactiTable {
 .formColumnRight {
     display: inline-flex;
     align-items: center;
+    text-align: left;
     flex: 1;
     width: 45%;
     padding: 1rem;
